plugins {
    id 'java'
    id "com.gradleup.shadow" version "9.0.0-rc3"
    id "io.papermc.paperweight.userdev" version "2.0.0-beta.18"
}

group = "com.darkbladedev"
version = "1.0.0"

java {
    sourceCompatibility = JavaVersion.VERSION_21
    targetCompatibility = JavaVersion.VERSION_21
}

compileJava {
    options.compilerArgs += ["-Xlint:deprecation", "-Xlint:unchecked"]
}

jar {
    manifest {
        attributes(
            "Main-Class": "com.darkbladedev.HeartlessMain"
        )
    }
}

repositories {
  mavenCentral()
  gradlePluginPortal()

  maven {
    name = 'jitpack'
    url = 'https://jitpack.io'
  }
  maven {
    name = 'papermc'
    url = 'https://repo.papermc.io/repository/maven-public/'
  }
  maven {
    name = 'placeholderapi'
    url = 'https://repo.extendedclip.com/content/repositories/placeholderapi/'
  }
  maven {
    name = 'codemc'
    url = 'https://repo.codemc.io/repository/maven-public/'
  }
}

dependencies {
  compileOnly 'io.papermc.paper:paper-api:1.21.5-R0.1-SNAPSHOT'
  paperweight.paperDevBundle("1.21.5-R0.1-SNAPSHOT")
  shadow("com.zaxxer:HikariCP:6.3.0")
  compileOnly "me.clip:placeholderapi:2.11.6"
  implementation 'de.tr7zw:item-nbt-api:2.14.1'
  
  // Testing dependencies
  testImplementation 'org.junit.jupiter:junit-jupiter-api:5.10.1'
  testImplementation 'org.junit.jupiter:junit-jupiter-engine:5.10.1'
  testImplementation 'org.junit.jupiter:junit-jupiter-params:5.10.1'
  testImplementation 'org.mockito:mockito-core:5.8.0'
  testImplementation 'org.mockito:mockito-junit-jupiter:5.8.0'
  testRuntimeOnly 'org.junit.platform:junit-platform-launcher:1.10.1'
}

shadowJar {
    // configuration = [project.configurations.shadow]
    archiveClassifier.set("")
    relocate("com.zaxxer.HikariCP", "com.darkbladedev.libs.HikariCP")
}

tasks.jar {
  manifest {
    attributes["paperweight-mappings-namespace"] = "mojang"
  }
}
// if you have shadowJar configured
tasks.shadowJar {
  manifest {
    attributes["paperweight-mappings-namespace"] = "mojang"
  }
}

// Configuración de tests
test {
    useJUnitPlatform()
    testLogging {
        events "passed", "skipped", "failed"
    }
}

// Tarea personalizada para obtener el classpath de pruebas
task printClasspath {
    doLast {
        println configurations.testRuntimeClasspath.asPath
    }
}

// Tarea personalizada para ejecutar tests con el framework personalizado
task runCustomTest(type: JavaExec) {
    dependsOn compileTestJava
    classpath = sourceSets.test.runtimeClasspath
    mainClass = 'com.darkbladedev.testing.TestLauncher'
    args = ['run-all']
    systemProperty 'java.awt.headless', 'true'
}
